--- a/src/Plugins/SmartStore.PayPal/Views/PayPalStandard/Configure.cshtml
+++ b/src/Plugins/SmartStore.PayPal/Views/PayPalStandard/Configure.cshtml
@@ -5,21 +5,19 @@
 	Layout = "";
 }
 
-<table class="plugin-intro-table">
-	<tr>
-		<td>
-			<div class="alert alert-info">
-				<button class="close" data-dismiss="alert">×</button>
-				@Html.Raw(T("Plugins.Payments.PayPalStandard.AdminInstruction"))
-			</div>
-		</td>
-		<td>
-			<a href="https://www.paypal.com/" target="_blank">
-				<img src="@Url.Content("~/Plugins/SmartStore.PayPal/Content/images/logo200x53.png")" alt="PayPal" class="logo" />
-			</a>
-		</td>
-	</tr>
-</table>
+<div class="plugin-configuration">
+	<div>
+		<div class="alert alert-info">
+			<button class="close" data-dismiss="alert">×</button>
+			@Html.Raw(T("Plugins.Payments.PayPalStandard.AdminInstruction"))
+		</div>
+	</div>
+	<div>
+		<a href="https://www.paypal.com/" target="_blank">
+			<img src="@Url.Content("~/Plugins/SmartStore.PayPal/Content/images/logo200x53.png")" alt="PayPal" class="logo" />
+		</a>
+	</div>
+</div>
 
 @Html.Action("StoreScopeConfiguration", "Setting", new { area = "Admin" })
 
