Added missing checkout widget zones

--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/WidgetZone.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/WidgetZone.cshtml
@@ -192,6 +192,27 @@
                     ]
                 },
                 {
+                    text: "@T("Admin.Configuration.Settings.ShoppingCart.Checkout")", children: [
+                        'checkout_billing_address_top',
+                        'checkout_billing_address_middle',
+                        'checkout_billing_address_bottom',
+                        'checkout_progress_before',
+                        'checkout_progress_after',
+                        'checkout_completed_top',
+                        'checkout_completed_bottom',
+                        'checkout_confirm_top',
+                        'checkout_confirm_before_summary',
+                        'checkout_confirm_bottom',
+                        'checkout_payment_method_top',
+                        'checkout_payment_method_bottom',
+                        'checkout_shipping_address_top',
+                        'checkout_shipping_address_middle',
+                        'checkout_shipping_address_bottom',
+                        'checkout_shipping_method_top',
+                        'checkout_shipping_method_bottom'
+        	        ]
+                },
+                {
                     text: "@T("Shoppingcart")", children: [
                         'mini_shopping_cart_bottom',
                         'order_summary_content_before',
