Convert Shop-Connector export to support new export framework

--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/Edit.cshtml
@@ -252,6 +252,11 @@
 			$('#ProjectionStoreContainer').toggle(!$(this).is(':checked'));
 		}).trigger('change');
 
+		// show/hide no grouped products note
+		$('#@(Html.FieldIdFor(x => x.Projection.NoGroupedProducts))').change(function () {
+			$('#NoGroupedProductsNote').toggle($(this).is(':checked'));
+		}).trigger('change');
+
 		$('#@(Html.FieldIdFor(x => x.Projection.AppendDescriptionText))').select2({ tags: [@(Html.Raw(Model.Projection.SerializedAppendDescriptionText))] });
 		$('#@(Html.FieldIdFor(x => x.Projection.CriticalCharacters))').select2({ tags: [@(Html.Raw(Model.Projection.SerializedCriticalCharacters))] });
 
