--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/Preview.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/Preview.cshtml
@@ -172,5 +172,5 @@ else if (Model.EntityType == ExportEntityType.Order)
 }
 else
 {
-	<div class="alert alert-error">Unsupported entity type!</div>
+	<div class="alert alert-warning">@T("Admin.DataExchange.Export.NoPreview")</div>
 }
