#791 Preselected attributes or attribute combinations should always be appended as querystring to product page links (part 2)

--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.Mobile.cshtml
@@ -81,7 +81,7 @@
                     <li>
                         <div class="cart-item-row">
                             <div class="product">
-                                <a href="@item.ProductUrl" title="View details">@item.ProductName</a>
+								<a href="@item.ProductUrl" title="@T("Products.Details")">@item.ProductName</a>
                                 @if (!String.IsNullOrEmpty(item.AttributeInfo))
                                 {
                                     <div class="attributes">
