--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/Wishlist.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/Wishlist.Mobile.cshtml
@@ -6,7 +6,6 @@
 @{
     Layout = "~/Views/Shared/_Root.cshtml";
 
-    //title
     Html.AddTitleParts(T("PageTitle.Wishlist").Text);
 }
 
@@ -99,7 +98,7 @@
                             <li>
                                 <div class="cart-item-row">
                                     <div class="product">
-                                        <a href="@item.ProductUrl" title="View details">@item.ProductName</a>
+										<a href="@item.ProductUrl" title="@T("Products.Details")">@item.ProductName</a>
                                         @if (!String.IsNullOrEmpty(item.AttributeInfo))
                                         {
                                             <div class="attributes">
